// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options changing options impacts visual output default tootip styles 1`] = `
"<div style=\\"position: fixed; visibility: visible; background-color: white; border: 1px solid; border-radius: 5px; padding: 10px;\\"><ul style=\\"list-style-type:none;margin:0;padding:0\\">
      <li style=\\"font-family:sans-serif;font-size:12px;\\">
        <span style=\\"font-weight:bold;\\">Title</span><span style=\\"font-weight:bold;\\">: </span>
        <span style=\\"\\">
          Prince of Wales
        </span>
      </li>
    </ul></div>"
`;

exports[`Options changing options impacts visual output modified options tootip styles 1`] = `
"<div style=\\"position: fixed; visibility: visible; background-color: green; border: 10px dotted; border-radius: 10px; padding: 20px;\\"><ul style=\\"list-style-type:none;margin:0;padding:0\\">
      <li style=\\"font-family:Times New Roman;font-size:20px;\\">
        <span style=\\"font-weight:normal;\\">Title</span><span style=\\"font-weight:normal;\\"> - </span>
        <span style=\\"font-weight:bold;\\">
          Prince of Wales
        </span>
      </li>
    </ul></div>"
`;
